[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["NikitinSemen <pr.pypblrka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
pillow = "^10.3.0"
black = "^24.4.2"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
