[tool.poetry]
name = "semen"
version = "0.1.0"
description = ""
authors = ["Nikitin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.24.0"
pillow = "^10.3.0"
black = "^24.4.2"
psycopg2-binary = "^2.9.9"
pytils = "^0.4.1"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
